# rails-compat

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
java/: README.md  marshal.rb  pom.xml
java/src/main/java/io/gcxrun/railscompat/activesupport/: KeyGenerator.java  MessageVerifier.java
java/src/main/java/io/gcxrun/railscompat/rubycore/: Marshal.java
java/src/test/java/io/gcxrun/railscompat/activesupport/: TestKeyGenerator.java  TestMessageVerifier.java
java/src/test/java/io/gcxrun/railscompat/rubycore/: TestCrossLanguageValidation.java  TestMarshal.java
python/: README.md  pyproject.toml
python/src/railscompat/: __init__.py
python/src/railscompat/activesupport/: __init__.py  key_generator.py  message_verifier.py
python/src/railscompat/rubycore/: __init__.py  marshal.py
python/tests/: __init__.py
python/tests/activesupport/: __init__.py  test_key_generator.py  test_message_verifier.py
python/tests/rubycore/: test_cross_language_validation.py  test_marshal.py
shared/ruby-reference/: cross_language_validator.rb  generate_test_data.rb
shared/test-data/: marshal_test_cases.json
typescript/: .eslintrc.js  jest.config.js  package-lock.json  package.json  tsconfig.json
typescript/src/: index.ts
typescript/src/railscompat/: index.ts
typescript/src/railscompat/actionpack/: index.ts
typescript/src/railscompat/activesupport/: index.ts
typescript/src/railscompat/rubycore/: index.ts  marshal.ts
typescript/tests/rubycore/: crossLanguageValidation.test.ts  marshal.test.ts
(+2 files in other folders)
