[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "railscompat"
version = "0.1.0"
description = "Python compatibility library for Rails applications"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest>=8.3.5",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/railscompat"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
